--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: cargo2nix
+        run: nix develop .#check -c just cargo2nix
+
       - name: format
         run: nix develop .#check -c just format
 
@@ -27,3 +30,6 @@ jobs:
 
       - name: lint
         run: nix develop .#check -c just lint
+
+      - name: test
+        run: nix develop .#check -c just test
