--- a/cspell.yaml
+++ b/cspell.yaml
@@ -11,7 +11,17 @@ ignorePaths:
   - "flake.lock"
   - "justfile"
   - "cspell.yaml"
+  - "docker-compose.yml"
 words:
   - "haras"
   - "orbitus"
   - "nebulon"
+  - "logits"
+  - "mixformer"
+  - "cuda"
+  - "gguf"
+  - "unsqueeze"
+  - "logits"
+  - "dtype"
+  - "surrealdb"
+  - "isready"
