--- a/src/double-star/Cargo.toml
+++ b/src/double-star/Cargo.toml
@@ -45,3 +45,5 @@ candle-transformers = { version = "0.7.2", features = ["cuda"] }
 candle-onnx = "0.7.2"
 hf-hub = { version = "0.3.2", features = ["tokio"] }
 tokenizers = { version = "0.20.0", features = ["hf-hub"] }
+chrono = { version = "0.4.38", features = ["serde"] }
+ulid = { version = "1.1.3", features = ["serde"] }
