--- a/src/gravity/Cargo.toml
+++ b/src/gravity/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
 async-trait = "0.1.83"
+chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.19", features = ["derive"] }
 directories = "5.0.1"
 envy = "0.4.2"
@@ -34,4 +35,5 @@ tokio-util = { version = "0.7.12", features = ["full"] }
 toml = "0.8.19"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+ulid = { version = "1.1.3", features = ["serde"] }
 uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
