--- a/src/nebulon/Cargo.toml
+++ b/src/nebulon/Cargo.toml
@@ -36,5 +36,8 @@ tokio-util = { version = "0.7.12", features = ["full"] }
 toml = "0.8.19"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
 surrealdb = "2.0.3"
+surrealdb-migrations = "2.0.0"
+chrono = { version = "0.4.38", features = ["serde"] }
+ulid = { version = "1.1.3", features = ["serde"] }
+include_dir = "0.7.4"
