--- a/src/orbitus/Cargo.toml
+++ b/src/orbitus/Cargo.toml
@@ -39,3 +39,5 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
 iced = "0.13.1"
 iced_futures = { version = "0.13.2", features = ["tokio"] }
+chrono = { version = "0.4.38", features = ["serde"] }
+ulid = { version = "1.1.3", features = ["serde"] }
