--- a/src/orbitus/Cargo.toml
+++ b/src/orbitus/Cargo.toml
@@ -37,7 +37,7 @@ toml = "0.8.19"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
-iced = "0.13.1"
+iced = { version = "0.13.1", features = ["tokio"] }
 iced_futures = { version = "0.13.2", features = ["tokio"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 ulid = { version = "1.1.3", features = ["serde"] }
