--- a/cspell.yaml
+++ b/cspell.yaml
@@ -25,3 +25,11 @@ words:
   - "dtype"
   - "surrealdb"
   - "isready"
+  - "chrono"
+  - "hnsw"
+  - "tungstenite"
+  - "rocksdb"
+  - "schemars"
+  - "dotenvy"
+  - "dotenv"
+  - "srgba"
