--- a/src/double-star/Cargo.toml
+++ b/src/double-star/Cargo.toml
@@ -2,6 +2,7 @@
 name = "double-star"
 version = "0.1.0"
 description = "Double Star"
+repository = "https://gitlab.com/haras-unicorn/double-star"
 authors = ["haras <social@haras.anonaddy.me>"]
 license = "MIT"
 readme = "README.md"
@@ -16,34 +17,22 @@ anyhow = { version = "1.0.89", features = ["backtrace"] }
 async-trait = "0.1.83"
 clap = { version = "4.5.19", features = ["derive"] }
 directories = "5.0.1"
-envy = "0.4.2"
 flume = { version = "0.11.0", features = ["async"] }
 futures = "0.3.31"
-futures-core = "0.3.31"
-futures-time = "3.0.0"
-itertools = "0.13.0"
 merge = "0.1.0"
-num_cpus = "1.16.0"
 rand = { version = "0.8.5", features = ["serde"] }
-rayon = "1.10.0"
-regex = "1.11.0"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
-serde_yaml = "0.9.34"
 shellexpand = "3.1.0"
 thiserror = "1.0.64"
 tokio = { version = "1.40.0", features = ["full"] }
-tokio-scoped = "0.2.0"
-tokio-util = { version = "0.7.12", features = ["full"] }
-toml = "0.8.19"
 tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
 candle-core = { version = "0.7.2", features = ["cuda"] }
 candle-nn = { version = "0.7.2", features = ["cuda"] }
 candle-transformers = { version = "0.7.2", features = ["cuda"] }
 candle-onnx = "0.7.2"
 hf-hub = { version = "0.3.2", features = ["tokio"] }
 tokenizers = { version = "0.20.0", features = ["hf-hub"] }
-chrono = { version = "0.4.38", features = ["serde"] }
-ulid = { version = "1.1.3", features = ["serde"] }
+tokio-tungstenite = "0.24.0"
+schemars = { version = "0.8.21", features = ["preserve_order"] }
+derivative = "2.2.0"
