--- a/src/gravity/Cargo.toml
+++ b/src/gravity/Cargo.toml
@@ -2,6 +2,7 @@
 name = "gravity"
 version = "0.1.0"
 description = "Gravity"
+repository = "https://gitlab.com/haras-unicorn/double-star"
 authors = ["haras <social@haras.anonaddy.me>"]
 license = "MIT"
 readme = "README.md"
@@ -9,31 +10,25 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
-async-trait = "0.1.83"
-chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.19", features = ["derive"] }
 directories = "5.0.1"
+dotenvy = "0.15.7"
 envy = "0.4.2"
-flume = { version = "0.11.0", features = ["async"] }
+flume = "0.11.1"
 futures = "0.3.31"
-futures-core = "0.3.31"
-futures-time = "3.0.0"
-itertools = "0.13.0"
 merge = "0.1.0"
-num_cpus = "1.16.0"
-rand = { version = "0.8.5", features = ["serde"] }
-rayon = "1.10.0"
-regex = "1.11.0"
+notify = { version = "6.1.1", default-features = false, features = [
+  "macos_kqueue",
+  "serde",
+] }
+schemars = { version = "0.8.21", features = ["preserve_order"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 serde_yaml = "0.9.34"
 shellexpand = "3.1.0"
+strum = { version = "0.26.3", features = ["derive"] }
 thiserror = "1.0.64"
 tokio = { version = "1.40.0", features = ["full"] }
-tokio-scoped = "0.2.0"
-tokio-util = { version = "0.7.12", features = ["full"] }
 toml = "0.8.19"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-ulid = { version = "1.1.3", features = ["serde"] }
-uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
