--- a/src/nebulon/Cargo.toml
+++ b/src/nebulon/Cargo.toml
@@ -22,7 +22,7 @@ thiserror = "1.0.64"
 tokio = { version = "1.40.0", features = ["full"] }
 toml = "0.8.19"
 tracing = "0.1.40"
-surrealdb = "2.0.3"
+surrealdb = { version = "2.0.3", features = ["kv-mem"] }
 surrealdb-migrations = "2.0.0"
 chrono = { version = "0.4.38", features = ["serde"] }
 ulid = { version = "1.1.3", features = ["serde"] }
